@@ -1,3 +1,10 @@
+Wed Jun 14 17:48:29 MDT  David Trowbridge <trowbrds@gmail.com>
+
+	* src/fe-gnome/palette.c:
+	* src/fe-gnome/palette.h:
+	  - Add super-awesome color palette optimization for the theme-based
+	    color scheme.
+
 Tue Jun 14 14:09:54 MDT  Dan Kuester <dkuester@colorado.edu>
 	* src/fe-gnome/xtext.h:
 	* src/fe-gnome/xtext.c:
